[package]
name = "entytd"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_common_assets = { version = "0.8.0", features = ["ron"] }
bevy_nine_slice_ui = { git = "https://github.com/rparrett/bevy_nine_slice_ui", branch = "bevyjam4" }
#bevy_nine_slice_ui = { git = "https://github.com/Lommix/bevy_nine_slice_ui", version = "0.4.0" }
rand = { version = "0.8.5", features = ["small_rng"] }
image = "*"
pathfinding = "4.4.0"
serde = "*"
bevy_pipelines_ready = "0.2.0"
strum = "0.25.0"
strum_macros = "0.25"

[features]
inspector = ["bevy-inspector-egui"]
recording = []

[dependencies.bevy]
version = "0.12.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi-threaded",
    "png",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "zstd",
]

[dependencies.bevy-inspector-egui]
version = "0.21.0"
default-features = false
optional = true

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
manual_let_else = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
map_flatten = "warn"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 1
