[package]
name = "entytd"
version = "0.3.0"
edition = "2021"

[dependencies]
bevy_common_assets = { version = "0.11.0", features = ["ron"] }
bevy_nine_slice_ui = "0.7.0"
bevy_pipelines_ready = "0.4.0"
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "small_rng",
] }
image = { version = "*", default-features = false }
pathfinding = "4.10.0"
serde = "*"
ron = "*"
strum = "0.26.0"
strum_macros = "0.26.0"
grid = "0.14.0"
thiserror = "1.0"

[features]
inspector = ["bevy-inspector-egui"]
recording = []

[dependencies.bevy]
version = "0.14"
default-features = false
features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "zstd",
]

[dependencies.bevy-inspector-egui]
version = "0.25.0"
default-features = false
optional = true

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
manual_let_else = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
map_flatten = "warn"

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "*", features = ["console", "Window", "Storage"] }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
